tests/ui/self/arbitrary-self-from-method-substs-with-receiver.stderr
error[E0308]: mismatched types
  --> $DIR/arbitrary-self-from-method-substs-with-receiver.rs:50:16
   |
LL |     assert_eq!(foo.a::<&Foo>(), 2);
   |                ^^^ expected `&Foo`, found `Foo`

error[E0308]: mismatched types
  --> $DIR/arbitrary-self-from-method-substs-with-receiver.rs:52:16
   |
LL |     assert_eq!(foo.b::<&Foo>(), 1);
   |                ^^^ expected `&Foo`, found `Foo`

error[E0308]: mismatched types
  --> $DIR/arbitrary-self-from-method-substs-with-receiver.rs:59:16
   |
LL |     assert_eq!(smart_ptr.a::<&Foo>(), 2);
   |                ^^^^^^^^^ expected `&Foo`, found `SmartPtr<'_, Foo>`
   |
   = note: expected reference `&Foo`
                 found struct `SmartPtr<'_, Foo, >`

error[E0308]: mismatched types
  --> $DIR/arbitrary-self-from-method-substs-with-receiver.rs:61:16
   |
LL |     assert_eq!(smart_ptr.b::<&Foo>(), 1);
   |                ^^^^^^^^^ expected `&Foo`, found `SmartPtr<'_, Foo>`
   |
   = note: expected reference `&Foo`
                 found struct `SmartPtr<'_, Foo, >`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
